fixed section spacing

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   background-image: url(images/donation9.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  margin-bottom: 80px;
 }
 .background_effect {
   width: 100%;
@@ -67,6 +68,8 @@ body {
   justify-content: center;
   align-items: center;
   gap: 40px;
+  margin-bottom: 80px;
+  margin-top: 20px;
 }
 
 .header_description {
@@ -139,6 +142,8 @@ body {
 /* =================================Donation Plan================================  */
 
 .donation_plan {
+  margin-bottom: 80px;
+  margin-top: 20px;
 }
 
 .cards_container {
